# escpos-to-html

./: .gitignore  .npmrc  .prettierignore  AGENTS.md  CLAUDE.md  README.md  eslint.config.js  package.json  pnpm-lock.yaml  tsconfig.base.json  tsconfig.json
apps/desktop/: components.json  index.html  package.json  tailwind.config.ts  tsconfig.json  vite.config.ts  vitest.config.ts
apps/desktop/src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/icons/: README.md
apps/desktop/src-tauri/src/: README.md  lib.rs  main.rs
apps/desktop/src-tauri/src/adapter/: mod.rs  tauri_commands.rs  tauri_receipt_events.rs  tcp_receipt_server.rs
apps/desktop/src-tauri/src/application/: mod.rs
apps/desktop/src-tauri/src/application/ports/: escpos_parser.rs  html_renderer.rs  mod.rs  receipt_events.rs
apps/desktop/src-tauri/src/application/use_cases/: convert_escpos_to_html.rs  mod.rs
apps/desktop/src-tauri/src/domain/: document.rs  errors.rs  mod.rs  tcp_receipt.rs
apps/desktop/src-tauri/src/infrastructure/: mod.rs
apps/desktop/src-tauri/src/infrastructure/parsers/: mod.rs  noop.rs
apps/desktop/src-tauri/src/infrastructure/renderers/: mod.rs  simple_html.rs
apps/desktop/src-tauri/src/infrastructure/tcp/: mod.rs  tcp_receipt_server.rs
apps/web/: components.json  index.html  package.json  tsconfig.app.json  tsconfig.node.json  (+1 more)
docs/: 20260519-receipt-ingest-and-rendering.md  desktop-tcp-receipt-preview-design.md  escpos-parsing-slides.html  macos-release-signing-guide.md  parsing-data-model.md
(+62 files in other folders)
