[package]
name = "escpos-desktop"
version = "0.0.0"
description = "ESC/POS to HTML desktop app"
authors = ["pyunghyuk.yoo@payhere.in"]
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "escpos_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
pretty_assertions = "1"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
